Update docker compose
